--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
   },
   "devDependencies": {
     "chai": "~1.7.2",
-    "sinon": "~1.7.3",
-    "shelljs": "~0.2.6"
+    "mocha": "^2.4.5",
+    "shelljs": "~0.2.6",
+    "sinon": "~1.7.3"
   }
 }
